--- a/configs/i3.config
+++ b/configs/i3.config
@@ -188,3 +188,11 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status
 }
+
+
+# My shit goes here
+
+exec --no-startup-id $HOME/i3life/utils/set-wallpaper 
+# exec --no-startup-id notify-send "$(tail -n 5 /tmp/i3_home.log)"
+
+bindsym $mod+Shift+x exec --no-startup-id i3lock --image /home/kali/wallpapers/index.jpg
