adds status bar config

--- a/configs/i3.config
+++ b/configs/i3.config
@@ -186,7 +186,8 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command i3blocks
+        font pango:Firacode 11
 }
 
 
@@ -196,3 +197,5 @@ exec --no-startup-id $HOME/i3life/utils/set-wallpaper
 # exec --no-startup-id notify-send "$(tail -n 5 /tmp/i3_home.log)"
 
 bindsym $mod+Shift+x exec --no-startup-id i3lock --image /home/kali/wallpapers/index.jpg
+
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
