--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -58,11 +58,8 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = hyprpaper
+exec-once = hyprpaper && sh -c "~/i3life/scripts/set-wallpaper"
 
-# hyprctl hyprpaper preload "~/i3life/configs/wall.jpg"
-# hyprctl hyprpaper wallpaper ",~/i3life/configs/wall.jpg"
-# hyprctl hyprpaper listloaded
 # hyprctl hyprpaper preload "~/i3life/configs/wall.jpg"
 # wallpaper=",~/i3life/configs/wall.jpg"
 
@@ -90,7 +87,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(F441DAff) rgba(5Ef51Aff) 90deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -118,15 +115,15 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 6
+        size = 3
         passes = 1
-        vibrancy = 0.6696
+        vibrancy = 0.1
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -251,6 +248,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = ALT, mouse:272, movewindow
 bindm = ALT, mouse:273, resizewindow
+# mouse:274, middle mouse
+# mouse:275, back mouse
+# mouse:276, forward mouse
+
 
 ##############################
 ### WINDOWS AND WORKSPACES ### --> -->> 
