--- a/configs/rc.conf
+++ b/configs/rc.conf
@@ -28,7 +28,7 @@ set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
-set column_ratios 1,3,4
+set column_ratios 1,2,3
 
 # Which files should be hidden? (regular expression)
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
@@ -350,6 +350,12 @@ map     Q quitall
 map     q quit
 copymap q ZZ ZQ
 
+
+map xx chain shell vim -p ~/.config/ranger/rc.conf; source ~/.config/ranger/rc.conf
+
+# map <C-r> eval fm.source(fm.confpath('rc.conf')) 
+
+
 map R     reload_cwd
 map F     set freeze_files!
 map <C-r> reset
@@ -455,8 +461,6 @@ map gl cd -r .
 map gL cd -r %f
 map go cd /opt
 map gv cd /var
-map gm cd /media
-map gi eval fm.cd('/run/media/' + os.getenv('USER'))
 map gM cd /mnt
 map gs cd /srv
 map gp cd /tmp
@@ -464,6 +468,12 @@ map gr cd /
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
+
+map gi cd ~/i3life
+map gmc cd ~/i3life/configs
+map gcc cd ~/.config
+map gcr cd ~/.config/ranger
+map gz cd ~/.oh-my-zsh
 
 # External Programs
 map E  edit
@@ -539,8 +549,6 @@ map <A-Right> tab_move 1
 map <A-Left>  tab_move -1
 map gt        tab_move 1
 map gT        tab_move -1
-map gn        tab_new
-map gc        tab_close
 map uq        tab_restore
 map <a-1>     tab_open 1
 map <a-2>     tab_open 2
