--- a/configs/ranger/rc.conf
+++ b/configs/ranger/rc.conf
@@ -1,5 +1,4 @@
-# ===================================================================
-# This file contains the default startup commands for ranger.
+# =================================================================== This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
 # (system-wide) or ~/.config/ranger/rc.conf (per user) and add your custom
 # commands there.
@@ -474,6 +473,8 @@ map gmc cd ~/i3life/configs
 map gcc cd ~/.config
 map gcr cd ~/.config/ranger
 map gz cd ~/.oh-my-zsh
+map gw cd ~/workhub/
+map gn cd ~/i3life/configs/nvim
 
 # External Programs
 map E  edit
@@ -622,6 +623,7 @@ map .p filter_stack pop
 map .. filter_stack show
 
 # Bookmarks
+set_bookmark `n "~/i3life/configs/nvim"n
 map `<any>  enter_bookmark %any
 map '<any>  enter_bookmark %any
 map m<any>  set_bookmark %any
