--- a/configs/tmux/tmux.conf
+++ b/configs/tmux/tmux.conf
@@ -1,105 +1,49 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+unbind C-s
 set -g prefix C-s
 set -g mouse on
-
-# Move around panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-# bind -n C-k send-keys C-l ; run 'sleep 0.1' ; clear-history
-
-bind-key -n C-n next-window
-bind-key -n C-p previous-window
+set-option -g status-position top
+#
+# # bind -n C-k send-keys C-l ; run 'sleep 0.1' ; clear-history
 
 # List of plugins
 # press <prefix>+shift+i to install plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'mocha'
 
-set -g @catppuccin_window_separator ""
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_middle_separator "█"
-set -g @catppuccin_window_right_separator "█"
-set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_status_icon_enable "yes"
+# # Smart pane switching with awareness of Vim splits.
+# # See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-set -g @catppuccin_icon_window_last "󰖰"
-set -g @catppuccin_icon_window_current "󰖯"
-set -g @catppuccin_icon_window_zoom "󰁌"
-set -g @catppuccin_icon_window_mark "󰃀"
-set -g @catppuccin_icon_window_silent "󰂛"
-set -g @catppuccin_icon_window_activity "󱅫"
-set -g @catppuccin_icon_window_bell "󰂞"
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -T copy-mode-vi 'C-l' select-pane -R
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_color "#{thm_blue}" # text color
-set -g @catppuccin_window_default_background "#{thm_gray}"
-set -g @catppuccin_window_default_text "#{b:pane_current_path}" # use "#W" for application instead of directory
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_color "#{thm_orange}" # text color
-set -g @catppuccin_window_current_background "#{thm_bg}"
 
-set -g @catppuccin_pane_border_style "fg=#{thm_gray}" # Use a value compatible with the standard tmux 'pane-border-style'
-set -g @catppuccin_status_default "on"
-set -g @catppuccin_status_background "theme"
-set -g @catppuccin_status_left_separator ""
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_connect_separator "yes"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_justify "left"
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '$HOME/.tmux/plugins/tpm/tpm'
 
-set -g @catppuccin_pane_status_enabled "no"
-set -g @catppuccin_pane_border_status "off" # See `pane-border-status`
-set -g @catppuccin_pane_left_separator "█"
-set -g @catppuccin_pane_right_separator "█"
-set -g @catppuccin_pane_middle_separator "█"
-set -g @catppuccin_pane_number_position "left"
-set -g @catppuccin_pane_default_fill "number"
-set -g @catppuccin_pane_default_text "#{b:pane_current_path}"
-set -g @catppuccin_pane_border_style "fg=#{thm_orange}"
-set -g @catppuccin_pane_active_border_style "fg=#{thm_orange}"
-set -g @catppuccin_pane_color "#{thm_orange}"
-set -g @catppuccin_pane_background_color "#{thm_orange}"
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
 
-# Config example 1
-# set -g @catppuccin_window_right_separator "█ "
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_middle_separator " | "
-# set -g @catppuccin_window_default_fill "none"
-# set -g @catppuccin_window_current_fill "all"
-# set -g @catppuccin_status_modules_right "application session user host date_time"
-# set -g @catppuccin_status_left_separator "█"
-# set -g @catppuccin_status_right_separator "█"
-# set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+if "test ! -d ~/.tmux/plugins/tpm" \
+       "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-# Config example 2
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█"
-# set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " █"
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#{pane_current_path}"
-# set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_fill "all"
-
-#Config example 3
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_left_separator  "█"
-set -g @catppuccin_status_connect_separator "yes"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-set-option -g status-position top
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
